--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.ramijemli.percentagechartview:percentagechartview:0.3.0'
+    implementation 'com.github.hadiidbouk:ChartProgressBar-Android:2.0.6'
 }
