--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.ramijemli.percentagechartview:percentagechartview:0.3.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
 }
